[gd_scene load_steps=6 format=3 uid="uid://cfihlrn53rwwl"]

[ext_resource type="Theme" uid="uid://dipbey4bho4f5" path="res://fonts/Themes/title.tres" id="1_b6yy6"]
[ext_resource type="Script" path="res://menus/settings/settings.gd" id="1_h0453"]
[ext_resource type="Theme" uid="uid://c8wmqfoaavicw" path="res://fonts/Themes/buttons_style_parameters.tres" id="2_6rr5n"]
[ext_resource type="PackedScene" uid="uid://dkmtvpd1op1e8" path="res://menus/settings/languages/settings_languages.tscn" id="3_g1i73"]
[ext_resource type="FontFile" uid="uid://b0hof85mkga7d" path="res://fonts/police/Playfulist-rgPp8.ttf" id="5_jekth"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0453")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.0666667, 0.6, 0.47451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_b6yy6")
text = "SETTINGS"
horizontal_alignment = 1

[node name="SplitScreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/SplitScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BG2" type="ColorRect" parent="MarginContainer/VBoxContainer/SplitScreen/SettingsMargin"]
layout_mode = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SplitScreen/SettingsMargin"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SplitScreen/SettingsMargin/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Languages" type="Button" parent="MarginContainer/VBoxContainer/SplitScreen/SettingsMargin/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_6rr5n")
text = "SETTINGS_LANGUAGES"
text_overrun_behavior = 3

[node name="ValuesMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/SplitScreen"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SettingsLanguages" parent="MarginContainer/VBoxContainer/SplitScreen/ValuesMargin" instance=ExtResource("3_g1i73")]
layout_mode = 2

[node name="MarginBackContinue" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 30

[node name="BackContinue" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginBackContinue"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginBackContinue/BackContinue"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/MarginBackContinue/BackContinue/BackMargin"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_jekth")
theme_override_font_sizes/font_size = 37
text = "BACK"

[connection signal="button_up" from="MarginContainer/VBoxContainer/SplitScreen/SettingsMargin/MarginContainer/VBoxContainer/Languages" to="." method="_on_languages_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginBackContinue/BackContinue/BackMargin/Back" to="." method="_on_back_button_up"]
